--- a/css/landing-portrait.css
+++ b/css/landing-portrait.css
@@ -25,12 +25,12 @@ font-family: Garamond, Times, Serif;
   width: 100%;
   height: auto;
   background-color: white;
-  margin:;
+  margin: 5vh 0 0 0;
 }
 
 .videoWrapper {
 	position: relative;
-	padding-bottom: 70%; /* 16:9 */
+	padding-bottom: 72.5%; /* 16:9 */
 	padding-top: 25px;
   width: 100%;
 	height: 0;
@@ -53,6 +53,7 @@ h3 {
 }
 
 p {
+  margin: 2em 0 0 0;
   padding: 20px 0 25px 0 !important;
   font-size: 2em;
 }
