--- a/css/landing-landscape.css
+++ b/css/landing-landscape.css
@@ -6,6 +6,7 @@ box-sizing: border-box;
 width: 100%;
 overflow-x: hidden;
 font-family: Garamond, Times, serif;
+background-color: black;
 }
 
 ::-webkit-scrollbar {
@@ -24,7 +25,7 @@ font-family: Garamond, Times, serif;
 .grid-container {
   width: 100%;
   height: auto;
-  background-color: white;
+  background-color: black;
   margin: 1% 21.7%;
 }
 
