--- a/css/landing-landscape.css
+++ b/css/landing-landscape.css
@@ -61,8 +61,7 @@ a {
   padding: 5px 15px !important;
   margin: 10px 0 20px 0 !important;
   font-family: Garamond, Times, serif;
-  font-size: 1.17em;
-  color: #383838;
-  background-color: #f0f0f0;
+  color: black;
+  background-color: #c2c2c2;
   text-decoration: none;
 }
