--- a/css/landing-portrait.css
+++ b/css/landing-portrait.css
@@ -26,12 +26,12 @@ background-color: black;
   width: 100%;
   height: auto;
   background-color: black;
-  margin: 5vh 0 0 0;
+  padding: 5vh 2vw 0 2vw;
 }
 
 .videoWrapper {
 	position: relative;
-	padding-bottom: 72.5%; /* 16:9 */
+	padding-bottom: 70.5%; /* 16:9 */
 	padding-top: 25px;
   width: 100%;
 	height: 0;
@@ -56,15 +56,13 @@ h3 {
 p {
   margin: 2em 0 0 0;
   padding: 20px 0 25px 0 !important;
-  font-size: 2em;
 }
 
 a {
   padding: 5px 15px !important;
   margin: 10px 0 20px 0 !important;
   font-family: Garamond, Times, serif;
-  font-size: 1.17em;
-  color: #383838;
-  background-color: #f0f0f0;
+  color: black;
+  background-color: #c2c2c2;
   text-decoration: none;
 }
