--- a/css/style-portrait.css
+++ b/css/style-portrait.css
@@ -33,7 +33,7 @@ iframe {
 }
 
 .grid-container-2 {
-  width: auto;
+  width: 100%;
   height: auto;
   background-color: white;
 }
@@ -65,7 +65,7 @@ table {
   right: 0;
   height: auto;
   width: auto;
-  padding: 1em;
+  padding: 0;
   color:white;
   text-align: center;
   overflow: visible;
@@ -77,7 +77,7 @@ table {
 }
 
 textarea {
-  width: 80%;
+  width: 90%;
   padding: 5px 10px;
   font-family: Garamond, Times, serif;
   font-size: 1.17em;
