--- a/css/style-portrait.css
+++ b/css/style-portrait.css
@@ -65,7 +65,7 @@ table {
   right: 0;
   height: auto;
   width: auto;
-  padding: 0;
+  padding: 0.5em;
   color:white;
   text-align: center;
   overflow: visible;
@@ -77,7 +77,7 @@ table {
 }
 
 textarea {
-  width: 90%;
+  width: 96%;
   padding: 5px 10px;
   font-family: Garamond, Times, serif;
   font-size: 1.17em;
